kubernetes/apps/karakeep/meilisearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.41.0
          volumeMounts:
            - mountPath: /meili_data
              name: meilisearch
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: meilisearch
          persistentVolumeClaim:
            claimName: meilisearch-pvc
