kubernetes/apps/karakeep/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: karakeep-web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: karakeep-web
    spec:
      containers:
        - name: web
          image: ghcr.io/karakeep-app/karakeep
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 300m
              memory: 256Mi
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
