kubernetes/apps/karakeep/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: karakeep-web
  ports:
    - name: karakeep-web-http
      port: 3000
      targetPort: 3000
  type: ClusterIP
