kubernetes/apps/karakeep/web-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep-internal-ingressroute
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`karakeep.internal.dmhosted.com`)
      kind: Rule
      services:
        - name: web
          port: 3000
  tls:
    secretName: karakeep-internal-certificate
